Prevent line breaks in inline math

--- a/style/tutorial.css
+++ b/style/tutorial.css
@@ -23,3 +23,7 @@
 .dash-list {
     list-style-type: "- ";
 }
+
+math[display="inline"] {
+    white-space: nowrap;
+}
